<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    android:padding="@dimen/input_padding"/>

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price"
                    android:padding="@dimen/input_padding"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/item_barcode"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"

                android:padding="@dimen/input_padding"
                android:text="@string/item_barcode" />

            <TextView
                android:id="@+id/item_barcode2"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"

                android:padding="@dimen/input_padding"
                android:text="@string/item_barcode" />

        </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>