<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_item" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/logo2" />

        <TextView
            android:id="@+id/transaction_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/add_inventory"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".85"
        android:layout_marginTop="@dimen/input_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Email Label -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:drawablePadding="@dimen/input_padding"
                    android:padding="@dimen/input_padding"
                    android:layout_margin="@dimen/input_margin"
                    android:hint="@string/hint_add_item_name" />

            </android.support.design.widget.TextInputLayout>

            <!-- Price -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="@dimen/input_padding"
                    android:layout_margin="@dimen/input_margin"
                    android:drawablePadding="@dimen/input_padding"
                    android:hint="@string/hint_add_item_price" />
            </android.support.design.widget.TextInputLayout>
            <!-- Price -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="@dimen/input_padding"
                    android:layout_margin="@dimen/input_margin"
                    android:drawablePadding="@dimen/input_padding"
                    android:hint="@string/item_quantity" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/selectDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/input_margin"
                android:drawablePadding="@dimen/input_padding"
                android:hint="@string/hint_add_item_date"
                android:padding="@dimen/input_padding" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"
                android:layout_marginRight="20dp"
                android:layout_marginStart="@dimen/input_margin"
                android:layout_marginEnd="@dimen/input_margin"
                android:layout_marginBottom="20dp"
                android:padding="@dimen/input_padding"/>

            <TextView
                android:id="@+id/input_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/input_margin"
                android:drawablePadding="@dimen/input_padding"
                android:hint="@string/barcode"
                android:padding="@dimen/input_padding" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"
                android:layout_marginRight="@dimen/input_margin"
                android:layout_marginStart="@dimen/input_margin"
                android:layout_marginEnd="@dimen/input_margin"
                android:layout_marginBottom="15dp"/>

            <Button
                android:id="@+id/saveInventory"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/save_inventory"
                android:padding="@dimen/input_padding"
                android:layout_margin="@dimen/input_margin"
                android:background="@color/colorPrimary"
                android:textColor="@color/text_white"
                android:textColorHint="@color/text_white"
                android:layout_marginTop="40dp"
                android:textSize="15sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </ScrollView>
</LinearLayout>