<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Summary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo2"
            />

        <TextView
            android:id="@+id/transaction_label"
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/summary_report"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".1"
    android:gravity="center"
    android:orientation="vertical">
    <!--profit details-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginTop="10dp"
            android:layout_height="150dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#7CB342"
                    >
                     <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/in"
                        android:padding="5dp"
                        android:textColor="@color/text_white"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/sold_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="300 items"
                        android:textColor="@color/text_white"
                        android:textSize="18sp"
                        android:padding="5dp"/>

                </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginTop="10dp"
            android:layout_height="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#C0CA33"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/out"
                    android:textSize="20sp"
                    android:textColor="@color/text_white"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/remaining_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="800 items"
                    android:textSize="18sp"
                    android:textColor="@color/text_white"
                    android:padding="5dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
</LinearLayout>
