<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/input_margin"
        android:baselineAligned="false"
        android:layout_marginLeft="@dimen/input_margin">

        <!--<ImageView-->
            <!--android:id="@+id/image"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_margin="4dp"-->
            <!--android:layout_weight=".1"-->
            <!--android:layout_gravity="center"-->
            <!--android:padding="2dp" />-->


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:padding="@dimen/input_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name_label"
                    />

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_barcode_label"
                    />

                <TextView
                    android:id="@+id/item_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".07"
                    android:layout_height="match_parent"
                    android:text="@string/item_price_label"/>

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/background_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_weight=".4"/>

                <ImageView
                    android:id="@+id/item_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:drawablePadding="@dimen/input_padding"
                    android:src="@drawable/ic_check_circle_green_24dp"
                    />

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/item_price_label" />-->

                <!--<TextView-->
                    <!--android:id="@+id/item_price"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="@dimen/input_margin"-->
                    <!--android:textColor="@android:color/background_dark"-->
                    <!--android:textSize="12sp"-->
                    <!--android:layout_marginLeft="@dimen/input_margin"-->
                    <!--android:textStyle="bold"/>-->

            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_date_label"
                    />

                <TextView
                    android:id="@+id/item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_margin"
                    android:layout_marginLeft="@dimen/input_margin"
                    android:textColor="@android:color/background_dark"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".12"
                    android:layout_height="match_parent"
                    android:text="QUANTITY:"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".4"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/background_dark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_weight=".4"/>

                    <TextView
                        android:id="@+id/remaining_quantity"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".8"
                        android:text="remain quantity: 500"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:background="@color/colorAccent"
                        />

                </LinearLayout>




            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>